Finished up till "fetching from server"

--- a/template.html
+++ b/template.html
@@ -5,6 +5,7 @@
     <script src="build/react.js"></script>
     <script src="build/JSXTransformer.js"></script>
     <script src="build/jquery-1.10.0.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>
   </head>
   <body>
     <div id="content"></div>
